--- a/index.html
+++ b/index.html
@@ -8,9 +8,23 @@
     <title>Discord</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <div class="flex-center" id="bg-menù">       
+            <div class="boxed flex-between border" id="container-menù">
+                <div><span>logo</span></div>
+                <div><span>link link link link link</span></div>
+                <div>login</div>
+            </div>
+        </div>
 
-    <main></main>
+        <div class="flex-center" id="bg-banner1">
+            <div class="boxed flex-center border" id="container-banner1"></div>
+        </div>
+    </header>
+
+    <main>
+        
+    </main>
 
     <footer></footer>    
 </body>
