feat: elementi main, ordinato proprietà css

--- a/index.html
+++ b/index.html
@@ -17,12 +17,30 @@
             </div>
         </div>
 
-        <div class="flex-center" id="bg-banner1">
-            <div class="boxed flex-center border" id="container-banner1"></div>
+        <div class="flex-center" id="bg-banner-header">
+            <div class="boxed flex-center border" id="container-banner-header"></div>
         </div>
     </header>
 
     <main>
+        <div class="flex-center bg-white">
+            <div class="boxed flex-center container-banner">
+                <div class="blue border"></div>
+                <div class="pink border"></div>
+            </div>
+        </div>
+        <div class="flex-center-reverse bg-gray">
+            <div class="boxed flex-center-reverse container-banner">
+                <div class="blue border"></div>
+                <div class="pink border"></div>
+            </div>
+        </div>
+        <div class="flex-center bg-white">
+            <div class="boxed flex-center container-banner">
+                <div class="blue border"></div>
+                <div class="pink border"></div>
+            </div>
+        </div>
         
     </main>
 
