feat: banner green

--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
                 <div class="pink border"></div>
             </div>
         </div>
-        
+        <div class="flex-center bg-gray">
+            <div class="boxed flex-center container-banner-big">
+                <div class="green border"></div>
+            </div>
+        </div>
     </main>
 
     <footer></footer>    
