--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="boxed flex-between border" id="container-menù">
                 <div><span>logo</span></div>
                 <div><span>link link link link link</span></div>
-                <div>login</div>
+                <div><span>login</span></div>
             </div>
         </div>
 
@@ -48,6 +48,25 @@
         </div>
     </main>
 
-    <footer></footer>    
+    <footer>
+        <div class="flex-center bg-black">
+            <div class="boxed flex-center container-footer">
+                <div class="red border"></div>
+                <div class="aquamarine flex-center border">
+                    <div class="aquamarine border-white"></div>
+                    <div class="aquamarine border-white"></div>
+                    <div class="aquamarine border-white"></div>
+                    <div class="aquamarine border-white"></div>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <div class="flex-center" id="bg-black-footer">       
+            <div class="boxed flex-between border" id="container-menù-footer">
+                <div class="footer-text border"><span>Logo</span></div>
+                <div class="footer-text border"><span>Bottone</span></div>
+            </div>
+        </div>
+    </footer>    
 </body>
 </html>
