fix: div header, risoluzione

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <header>
         <div class="flex-center" id="bg-menù">       
-            <div class="boxed flex-between border" id="container-menù">
-                <div><span>logo</span></div>
-                <div><span>link link link link link</span></div>
-                <div><span>login</span></div>
+            <div class="boxed flex-between" id="container-menù">
+                <div class="flex-start col20 bg-orange text-left border">logo</div>
+                <div class="flex-center col60 bg-orange text-center border">link link link link link</div>
+                <div class="flex-end col20 bg-orange text-right border">login</div>
             </div>
         </div>
 
